# forefireTFG

./: .gitignore  Dockerfile  README.md  example.env  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yaml
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/src/pyforefire/: __init__.py  _pyforefire.cpp  _pyforefire.h  helpers.py
bindings/python/src/pyforefire.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: API.py  _pruebas.py  consumer.py  exceptions.py  parametersHandler.py  rasterHandler.py  simulator.py
src/BalbiNov2011/: parametersHandlerBalbiNov2011.py  rasterHandlerBalbiNov2011.py
src/Farsite/: parametersHandlerFarsite.py
src/helpers/: awsUtils.py  jsonParserUtils.py  modelsUtils.py  preprocessUtils.py  requestUtils.py
src/include/: ArrayDataLayer.h  BurningMap.h  BurningMapLayer.h  BurningRatioLayer.h  CLibForeFire.h  Command.h  DataBroker.h  DataLayer.h  EventCommand.h  FDCell.h  FFArrays.h  FFEvent.h  FFPoint.h  FFVector.h  FireDomain.h  FireFront.h  FireFrontData.h  FireNode.h  FireNodeData.h  FluxLayer.h  FluxModel.h  ForeFireAtom.h  ForeFireModel.h  FuelDataLayer.h  Futils.h  GradientDataLayer.h  HttpCommandServer.hpp  MultiplicativeLayer.h  NCXYZTDataLayer.h  ParallelData.h  ParallelException.h  PropagationModel.h  PropagativeLayer.h  RosLayer.h  SimulationParameters.h  Simulator.h  StringRepresentation.h  TimeGradientDataLayer.h  TimeTable.h  TwoTimeArrayLayer.h  (+4 more)
src/include/flux/: FromObsModels.h
src/parametersHandlers/: parametersHandlerBalbiNov2011.py  parametersHandlerFarsite.py
(+6 files in other folders)
