[project]
name = "pyforefire"
version = "2025.2"
dependencies = [
    "pybind11",
    "numpy",
    "matplotlib"
]
requires-python = ">=3.8"
authors = [
  { name = "Jean-Baptiste Filippi", email = "filippi_j@univ-corse.fr" },
  { name = "Quentin Duriani", email = "qduriani@gmail.com" }
]
maintainers = [
  { name = "Jean-Baptiste Filippi", email = "filippi_j@univ-corse.fr" }
]
description = "Python version of ForeFire library"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["ForeFire", "forefire", "pyforefire", "pybind", "pybind11"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent"
]

[build-system]
requires = ["setuptools>=61", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/forefireAPI/forefire"
Repository = "https://github.com/forefireAPI/forefire"
